Fixed cart counter. Added link from view cart to checkout.

--- a/src/main/resources/templates/customerHomePage.html
+++ b/src/main/resources/templates/customerHomePage.html
@@ -69,7 +69,7 @@
         Search Stores
     </button>
 
-    <button class="dash-btn" onclick="window.location.href='/cart'">
+    <button class="dash-btn" onclick="window.location.href='/cart/checkout'">
         View Cart
     </button>
 
